# raytracer-rust

./: .gitignore  Cargo.toml  README.md
data/: semesterbild.json
data/models/amogus/: sus.xml
data/scenes/: scene_from_rust.json  semesterbild copy.json  semesterbild.json
data/scenes/tungsten/teapot/: scene.json
data/scenes/tungsten/veach-mis/: scene.json
src/: camera.rs  color.rs  hittable.rs  light.rs  main.rs  material.rs  mitsuba_parser.rs  ray.rs  renderer.rs  scene.rs  text_mesh.rs  tungsten_parser.rs  vec3.rs
src/acceleration/: aabb.rs  bvh.rs  mod.rs
src/mesh/: aabb.rs  bvh.rs  mesh_object.rs  mod.rs  triangle.rs
src/objects/: cube.rs  mod.rs  plane.rs  quad.rs  sphere.rs
src/tungsten/: materials.rs  mod.rs  parser.rs
src/tungsten/objects/: mod.rs  quad.rs
