[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
chrono = "0.4.41"
glam = "0.30.3"
image = "0.25.6"
indicatif = "0.17.11"
minifb = "0.24"
rand = "0.9.1"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tobj = "4.0.3"
